agent: api: rest: Add Kubernetes information
